Update bat and sh files: - Increased Permanent Generation space (can be removed when moving to Java 8). - Fixed problem with adding jar files from other lib folders to the classpath. Thanks to Felix.