@@ -10,8 +10,8 @@
 @set X=%X%;.\dist\ProM-Models.jar
 @set X=%X%;.\dist\ProM-Plugins.jar
 
-@for /R . %%I IN ("\lib\*.jar") DO @call :add .\lib\%%~nI.jar
+@for /R .\lib %%I IN ("*.jar") DO @call :add .\lib\%%~nI.jar
 
-@java -Xmx1G -classpath "%X%" -XX:+UseCompressedOops -Djava.library.path=.//lib -Djava.util.Arrays.useLegacyMergeSort=true org.processmining.contexts.uitopia.UI
+@java -Xmx1G -XX:MaxPermSize=256m -classpath "%X%" -XX:+UseCompressedOops -Djava.library.path=.//lib -Djava.util.Arrays.useLegacyMergeSort=true org.processmining.contexts.uitopia.UI
 
 set X=
